--- a/.github/workflows/angular_workflow.yml
+++ b/.github/workflows/angular_workflow.yml
@@ -1,34 +1,41 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# .github/workflows/angular-cd.yml
 
-name: Deploy to DigitalOcean App
+name: Angular CI/CD with Digital Ocean
 
 on:
   push:
     branches:
-      - main
+      - main # Change this to the branch you want to trigger the workflow
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '14.x' # Change this to match your project's Node.js version
 
-      - name: Install dependencies
-        run: npm install
+    - name: Install dependencies
+      run: npm install
 
-      - name: Build application
-        run: npm run build
+    - name: Build Angular app
+      run: npm run build -- --prod
 
-      - name: Deploy to DigitalOcean App
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-          args: app deploy ${{ secrets.DIGITALOCEAN_APP_NAME }}
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Deploy to Digital Ocean
+      uses: appleboy/scp-action@v0.3.0
+      with:
+        host: ${{ secrets.DROPLET_IP }} # The IP address of your Digital Ocean Droplet
+        username: ${{ secrets.DROPLET_USERNAME }} # The username for accessing the Droplet
+        key: ${{ secrets.SSH_PRIVATE_KEY }} # Your private SSH key (use secrets to store it securely)
+        source: dist/ # The path to your Angular build artifacts
+        target: /var/www/html/ # The web server directory where the app will be deployed
