--- a/.github/workflows/angular_workflow.yml
+++ b/.github/workflows/angular_workflow.yml
@@ -41,6 +41,18 @@ jobs:
           host: ${{ secrets.DROPLET_IP }}
           username: ${{ secrets.DROPLET_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          source: "dist"
-          target: /var/www/html/
+          script: |
+              echo 'Creating app directory to house the app'
+              mkdir app
+              echo 'Cd into the current folder'
+              cd app
+              echo 'Clone repo from github to app directory'
+              git clone git@github.com:factory24/aqm-site.git
+              echo 'Build the project's'
+              npm run build
+              echo 'Copy the build files to web server '
+              cp -f ./app/dist /var/www/html
+              echo 'Restart the nginx server'
+              sudo service nginx restart
+
 
