--- a/.github/workflows/angular_workflow.yml
+++ b/.github/workflows/angular_workflow.yml
@@ -32,7 +32,7 @@ jobs:
 
     steps:
       - name: Deploy to Digital Ocean
-        uses: appleboy/scp-action@v0.1.4
+        uses: appleboy/ssh-action@v0.1.2
         with:
           host: ${{ secrets.DROPLET_IP }}
           username: ${{ secrets.DROPLET_USERNAME }}
