--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,4 +1,4 @@
-apiVersion: skaffold/v3alpha1 
+apiVersion: skaffold/v3alpha1
 kind: Config
 metadata:
   name: hydrate-dashboard
@@ -6,23 +6,10 @@ profiles:
   - name: prod
     build:
       artifacts:
-        - image: gfacratharipazwe.azurecr.io/frontend/aqm-site-ns/aqm-site #isammyk/invoice-service
+        - image: gfacratharipazwe.azurecr.io/frontend/aquametrics/website:latest
           docker:
             dockerfile: Dockerfile
     manifests:
       kustomize:
         paths:
           - ./manifest/prod
-  
-
-  - name: dev
-    build:
-      artifacts:
-        - image: gfacratharipazwe.azurecr.io/frontend/aqm-site-ns/aqm-site #isammyk/invoice-service
-          docker:
-            dockerfile: Dockerfile
-    manifests:
-      kustomize:
-        paths:
-          - ./manifest/dev
-    
