--- a/manifest/base/kustomization.yml
+++ b/manifest/base/kustomization.yml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-    - hydrate-dashboard-deployment.yml
-    - hydrate-dashboard-service.yml
-
+    - deployment.yml
+    - service.yml
+    - virtual-service.yml
 
