--- a/manifest/overlays/prod/prod-virtual-service.yml
+++ b/manifest/overlays/prod/prod-virtual-service.yml
@@ -1,20 +1,20 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: hydrate-dashboard-ingres
-  namespace: athari
+  name: aquametrics
+  namespace: aquametrics
 spec:
   hosts:
-    - 'app.dev.hydrate.net'
+    - 'aquametrics.ch'
   gateways:
-    - istio-system/hydrate-gateway
+    - aquametrics
   http:
-    - name: "hydrate-dashboard"
+    - name: "aquametrics-routes"
       match:
         - uri:
             prefix: /
       route:
         - destination:
-            host: hydrate-dashboard.athari.svc.cluster.local
+            host: aquametrics.aquametrics.svc.cluster.local
             port:
               number: 80
