--- a/.github/workflows/angular_workflow.yml
+++ b/.github/workflows/angular_workflow.yml
@@ -3,7 +3,7 @@ name: Deploy Angular App to Droplet
 on:
   push:
     branches:
-      - main  # Change to your preferred branch
+      - main
 
 jobs:
   deploy:
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16.14.2  # Change to your preferred Node.js version
+          node-version: 16.14.2
 
       - name: Install Angular CLI
         run: npm install -g @angular/cli
